clusters/k3s-home/apps/media/lidarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr-http-route
  namespace: media
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
  hostnames:
    - "lidarr.fletcherlabs.net"
  rules:
    - backendRefs:
        - name: lidarr-main
          port: 8686
