clusters/k3s-home/apps/media/lidarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr-ingress
  namespace: media
spec:
  ingressClassName: cilium
  rules:
    - host: lidarr.fletcherlabs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 8686
